backend/gramatica/.antlr/ReactParser.js
// Generated from React.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require("antlr4");
var ReactListener = require("./ReactListener").ReactListener;
var grammarFileName = "React.g4";


var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map(function (ds, index) {
  return new antlr4.dfa.DFA(ds, index);
});

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [
  null,
  "','",
  "'''",
  "'\"'",
  "'import'",
  "'{'",
  "'}'",
  "'from'",
  "';'",
  "'\n'",
  "'function'",
  "'('",
  "')'",
  "'return'",
  "'<'",
  "'>'",
  "'/'",
  "'export'",
  "'='",
  "'null'",
  "'true'",
  "'false'",
  "'.'",
  "'propTypes'",
  "'PropTypes'",
  "':'",
  "'array'",
  "'bool'",
  "'func'",
  "'number'",
  "'object'",
  "'string'",
  "'symbol'",
  "'if'",
  "'else'",
  "'var'",
  "'let'",
  "'==='",
  "'!=='",
  "'++'",
  "'--'",
  "'break'",
  "'!'",
  "'&&'",
  "'||'",
  "'?'",
  "'['",
  "']'",
  "'while'",
  "'for'",
  "'-'",
];

var symbolicNames = [
  null,
  "COMA",
  "COMILLA1",
  "COMILLA2",
  "IMPORT",
  "CORCHETE_IZQ",
  "CORCHETE_DER",
  "FROM",
  "PUNTO_COMA",
  "SALTO",
  "FUNCTION",
  "PAR_IZQ",
  "PAR_DER",
  "RETURN",
  "OPEN_TAG",
  "CLOSE_TAG",
  "SLASH",
  "EXPORT",
  "IGUAL",
  "NULL",
  "TRUE",
  "FALSE",
  "PUNTO",
  "PROPTYPES",
  "PROPTYPESCLASS",
  "DOS_PUNTOS",
  "ARRAY",
  "BOOL",
  "FUNC",
  "NUMBER",
  "OBJECT",
  "STRING_TYPE",
  "SYMBOL",
  "IF",
  "ELSE",
  "VAR",
  "LET",
  "ES_IGUAL",
  "ES_DIFERENTE",
  "INCREMENTAR",
  "DECREMENTAR",
  "BREAK",
  "NOT",
  "AND",
  "OR",
  "INTERROGANTE",
  "PAR_CUADR_IZQ",
  "PAR_CUADR_DER",
  "WHILE",
  "FOR",
  "MENOS",
  "WHITESPACE",
  "ID",
  "STRING",
  "INTEGER",
];

var ruleNames = [
  "program",
  "program_body",
  "import_statement",
  "id_list",
  "more_id",
  "functionR",
  "func_body",
  "html_elements",
  "html_short_element",
  "props",
  "more_props",
  "possible_assign",
  "literal",
  "value_html_tag",
  "adding_proptypes",
  "prop_types_body",
  "types_of_proptypes",
  "var_def",
  "stmt",
  "simple_stmt",
  "block",
  "expr",
  "cexpr",
  "list_expr",
  "more_expr",
  "target",
];

function ReactParser(input) {
  antlr4.Parser.call(this, input);
  this._interp = new antlr4.atn.ParserATNSimulator(
    this,
    atn,
    decisionsToDFA,
    sharedContextCache
  );
  this.ruleNames = ruleNames;
  this.literalNames = literalNames;
  this.symbolicNames = symbolicNames;
  return this;
}

ReactParser.prototype = Object.create(antlr4.Parser.prototype);
ReactParser.prototype.constructor = ReactParser;

Object.defineProperty(ReactParser.prototype, "atn", {
  get: function () {
    return atn;
  },
});

ReactParser.EOF = antlr4.Token.EOF;
ReactParser.COMA = 1;
ReactParser.COMILLA1 = 2;
ReactParser.COMILLA2 = 3;
ReactParser.IMPORT = 4;
ReactParser.CORCHETE_IZQ = 5;
ReactParser.CORCHETE_DER = 6;
ReactParser.FROM = 7;
ReactParser.PUNTO_COMA = 8;
ReactParser.SALTO = 9;
ReactParser.FUNCTION = 10;
ReactParser.PAR_IZQ = 11;
ReactParser.PAR_DER = 12;
ReactParser.RETURN = 13;
ReactParser.OPEN_TAG = 14;
ReactParser.CLOSE_TAG = 15;
ReactParser.SLASH = 16;
ReactParser.EXPORT = 17;
ReactParser.IGUAL = 18;
ReactParser.NULL = 19;
ReactParser.TRUE = 20;
ReactParser.FALSE = 21;
ReactParser.PUNTO = 22;
ReactParser.PROPTYPES = 23;
ReactParser.PROPTYPESCLASS = 24;
ReactParser.DOS_PUNTOS = 25;
ReactParser.ARRAY = 26;
ReactParser.BOOL = 27;
ReactParser.FUNC = 28;
ReactParser.NUMBER = 29;
ReactParser.OBJECT = 30;
ReactParser.STRING_TYPE = 31;
ReactParser.SYMBOL = 32;
ReactParser.IF = 33;
ReactParser.ELSE = 34;
ReactParser.VAR = 35;
ReactParser.LET = 36;
ReactParser.ES_IGUAL = 37;
ReactParser.ES_DIFERENTE = 38;
ReactParser.INCREMENTAR = 39;
ReactParser.DECREMENTAR = 40;
ReactParser.BREAK = 41;
ReactParser.NOT = 42;
ReactParser.AND = 43;
ReactParser.OR = 44;
ReactParser.INTERROGANTE = 45;
ReactParser.PAR_CUADR_IZQ = 46;
ReactParser.PAR_CUADR_DER = 47;
ReactParser.WHILE = 48;
ReactParser.FOR = 49;
ReactParser.MENOS = 50;
ReactParser.WHITESPACE = 51;
ReactParser.ID = 52;
ReactParser.STRING = 53;
ReactParser.INTEGER = 54;

ReactParser.RULE_program = 0;
ReactParser.RULE_program_body = 1;
ReactParser.RULE_import_statement = 2;
ReactParser.RULE_id_list = 3;
ReactParser.RULE_more_id = 4;
ReactParser.RULE_functionR = 5;
ReactParser.RULE_func_body = 6;
ReactParser.RULE_html_elements = 7;
ReactParser.RULE_html_short_element = 8;
ReactParser.RULE_props = 9;
ReactParser.RULE_more_props = 10;
ReactParser.RULE_possible_assign = 11;
ReactParser.RULE_literal = 12;
ReactParser.RULE_value_html_tag = 13;
ReactParser.RULE_adding_proptypes = 14;
ReactParser.RULE_prop_types_body = 15;
ReactParser.RULE_types_of_proptypes = 16;
ReactParser.RULE_var_def = 17;
ReactParser.RULE_stmt = 18;
ReactParser.RULE_simple_stmt = 19;
ReactParser.RULE_block = 20;
ReactParser.RULE_expr = 21;
ReactParser.RULE_cexpr = 22;
ReactParser.RULE_list_expr = 23;
ReactParser.RULE_more_expr = 24;
ReactParser.RULE_target = 25;

function ProgramContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_program;
  return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function () {
  return this.getToken(ReactParser.EOF, 0);
};

ProgramContext.prototype.program_body = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(Program_bodyContext);
  } else {
    return this.getTypedRuleContext(Program_bodyContext, i);
  }
};

ProgramContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterProgram(this);
  }
};

ProgramContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitProgram(this);
  }
};

ReactParser.ProgramContext = ProgramContext;

ReactParser.prototype.program = function () {
  var localctx = new ProgramContext(this, this._ctx, this.state);
  this.enterRule(localctx, 0, ReactParser.RULE_program);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 55;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while (
      _la === ReactParser.IMPORT ||
      _la === ReactParser.FUNCTION ||
      _la === ReactParser.ID
    ) {
      this.state = 52;
      this.program_body();
      this.state = 57;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
    this.state = 58;
    this.match(ReactParser.EOF);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function Program_bodyContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_program_body;
  return this;
}

Program_bodyContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
Program_bodyContext.prototype.constructor = Program_bodyContext;

Program_bodyContext.prototype.import_statement = function () {
  return this.getTypedRuleContext(Import_statementContext, 0);
};

Program_bodyContext.prototype.functionR = function () {
  return this.getTypedRuleContext(FunctionRContext, 0);
};

Program_bodyContext.prototype.adding_proptypes = function () {
  return this.getTypedRuleContext(Adding_proptypesContext, 0);
};

Program_bodyContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterProgram_body(this);
  }
};

Program_bodyContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitProgram_body(this);
  }
};

ReactParser.Program_bodyContext = Program_bodyContext;

ReactParser.prototype.program_body = function () {
  var localctx = new Program_bodyContext(this, this._ctx, this.state);
  this.enterRule(localctx, 2, ReactParser.RULE_program_body);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 63;
    this._errHandler.sync(this);
    switch (this._input.LA(1)) {
      case ReactParser.IMPORT:
        this.state = 60;
        this.import_statement();
        break;
      case ReactParser.FUNCTION:
        this.state = 61;
        this.functionR();
        break;
      case ReactParser.ID:
        this.state = 62;
        this.adding_proptypes();
        break;
      default:
        throw new antlr4.error.NoViableAltException(this);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function Import_statementContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_import_statement;
  return this;
}

Import_statementContext.prototype = Object.create(
  antlr4.ParserRuleContext.prototype
);
Import_statementContext.prototype.constructor = Import_statementContext;

Import_statementContext.prototype.copyFrom = function (ctx) {
  antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};

function Id_importContext(parser, ctx) {
  Import_statementContext.call(this, parser);
  Import_statementContext.prototype.copyFrom.call(this, ctx);
  return this;
}

Id_importContext.prototype = Object.create(Import_statementContext.prototype);
Id_importContext.prototype.constructor = Id_importContext;

ReactParser.Id_importContext = Id_importContext;

Id_importContext.prototype.IMPORT = function () {
  return this.getToken(ReactParser.IMPORT, 0);
};

Id_importContext.prototype.ID = function () {
  return this.getToken(ReactParser.ID, 0);
};

Id_importContext.prototype.FROM = function () {
  return this.getToken(ReactParser.FROM, 0);
};

Id_importContext.prototype.STRING = function () {
  return this.getToken(ReactParser.STRING, 0);
};

Id_importContext.prototype.PUNTO_COMA = function () {
  return this.getToken(ReactParser.PUNTO_COMA, 0);
};

Id_importContext.prototype.COMA = function () {
  return this.getToken(ReactParser.COMA, 0);
};

Id_importContext.prototype.CORCHETE_IZQ = function () {
  return this.getToken(ReactParser.CORCHETE_IZQ, 0);
};

Id_importContext.prototype.id_list = function () {
  return this.getTypedRuleContext(Id_listContext, 0);
};

Id_importContext.prototype.CORCHETE_DER = function () {
  return this.getToken(ReactParser.CORCHETE_DER, 0);
};

Id_importContext.prototype.SALTO = function () {
  return this.getToken(ReactParser.SALTO, 0);
};
Id_importContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterId_import(this);
  }
};

Id_importContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitId_import(this);
  }
};

function No_id_importContext(parser, ctx) {
  Import_statementContext.call(this, parser);
  Import_statementContext.prototype.copyFrom.call(this, ctx);
  return this;
}

No_id_importContext.prototype = Object.create(
  Import_statementContext.prototype
);
No_id_importContext.prototype.constructor = No_id_importContext;

ReactParser.No_id_importContext = No_id_importContext;

No_id_importContext.prototype.IMPORT = function () {
  return this.getToken(ReactParser.IMPORT, 0);
};

No_id_importContext.prototype.CORCHETE_IZQ = function () {
  return this.getToken(ReactParser.CORCHETE_IZQ, 0);
};

No_id_importContext.prototype.id_list = function () {
  return this.getTypedRuleContext(Id_listContext, 0);
};

No_id_importContext.prototype.CORCHETE_DER = function () {
  return this.getToken(ReactParser.CORCHETE_DER, 0);
};

No_id_importContext.prototype.FROM = function () {
  return this.getToken(ReactParser.FROM, 0);
};

No_id_importContext.prototype.STRING = function () {
  return this.getToken(ReactParser.STRING, 0);
};

No_id_importContext.prototype.PUNTO_COMA = function () {
  return this.getToken(ReactParser.PUNTO_COMA, 0);
};

No_id_importContext.prototype.SALTO = function () {
  return this.getToken(ReactParser.SALTO, 0);
};
No_id_importContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterNo_id_import(this);
  }
};

No_id_importContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitNo_id_import(this);
  }
};

ReactParser.Import_statementContext = Import_statementContext;

ReactParser.prototype.import_statement = function () {
  var localctx = new Import_statementContext(this, this._ctx, this.state);
  this.enterRule(localctx, 4, ReactParser.RULE_import_statement);
  var _la = 0; // Token type
  try {
    this.state = 90;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 5, this._ctx);
    switch (la_) {
      case 1:
        localctx = new No_id_importContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 65;
        this.match(ReactParser.IMPORT);
        this.state = 66;
        this.match(ReactParser.CORCHETE_IZQ);
        this.state = 67;
        this.id_list();
        this.state = 68;
        this.match(ReactParser.CORCHETE_DER);
        this.state = 69;
        this.match(ReactParser.FROM);
        this.state = 70;
        this.match(ReactParser.STRING);
        this.state = 71;
        this.match(ReactParser.PUNTO_COMA);
        this.state = 73;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === ReactParser.SALTO) {
          this.state = 72;
          this.match(ReactParser.SALTO);
        }

        break;

      case 2:
        localctx = new Id_importContext(this, localctx);
        this.enterOuterAlt(localctx, 2);
        this.state = 75;
        this.match(ReactParser.IMPORT);
        this.state = 76;
        this.match(ReactParser.ID);
        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === ReactParser.COMA) {
          this.state = 77;
          this.match(ReactParser.COMA);
          this.state = 78;
          this.match(ReactParser.CORCHETE_IZQ);
          this.state = 79;
          this.id_list();
          this.state = 80;
          this.match(ReactParser.CORCHETE_DER);
        }

        this.state = 84;
        this.match(ReactParser.FROM);
        this.state = 85;
        this.match(ReactParser.STRING);
        this.state = 86;
        this.match(ReactParser.PUNTO_COMA);
        this.state = 88;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === ReactParser.SALTO) {
          this.state = 87;
          this.match(ReactParser.SALTO);
        }

        break;
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function Id_listContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_id_list;
  return this;
}

Id_listContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Id_listContext.prototype.constructor = Id_listContext;

Id_listContext.prototype.ID = function () {
  return this.getToken(ReactParser.ID, 0);
};

Id_listContext.prototype.more_id = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(More_idContext);
  } else {
    return this.getTypedRuleContext(More_idContext, i);
  }
};

Id_listContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterId_list(this);
  }
};

Id_listContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitId_list(this);
  }
};

ReactParser.Id_listContext = Id_listContext;

ReactParser.prototype.id_list = function () {
  var localctx = new Id_listContext(this, this._ctx, this.state);
  this.enterRule(localctx, 6, ReactParser.RULE_id_list);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 92;
    this.match(ReactParser.ID);
    this.state = 96;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    while (_la === ReactParser.COMA) {
      this.state = 93;
      this.more_id();
      this.state = 98;
      this._errHandler.sync(this);
      _la = this._input.LA(1);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function More_idContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_more_id;
  return this;
}

More_idContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
More_idContext.prototype.constructor = More_idContext;

More_idContext.prototype.COMA = function () {
  return this.getToken(ReactParser.COMA, 0);
};

More_idContext.prototype.ID = function () {
  return this.getToken(ReactParser.ID, 0);
};

More_idContext.prototype.more_id = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTypedRuleContexts(More_idContext);
  } else {
    return this.getTypedRuleContext(More_idContext, i);
  }
};

More_idContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterMore_id(this);
  }
};

More_idContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitMore_id(this);
  }
};

ReactParser.More_idContext = More_idContext;

ReactParser.prototype.more_id = function () {
  var localctx = new More_idContext(this, this._ctx, this.state);
  this.enterRule(localctx, 8, ReactParser.RULE_more_id);
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 99;
    this.match(ReactParser.COMA);
    this.state = 100;
    this.match(ReactParser.ID);
    this.state = 104;
    this._errHandler.sync(this);
    var _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
    while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
      if (_alt === 1) {
        this.state = 101;
        this.more_id();
      }
      this.state = 106;
      this._errHandler.sync(this);
      _alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function FunctionRContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_functionR;
  return this;
}

FunctionRContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionRContext.prototype.constructor = FunctionRContext;

FunctionRContext.prototype.FUNCTION = function () {
  return this.getToken(ReactParser.FUNCTION, 0);
};

FunctionRContext.prototype.ID = function () {
  return this.getToken(ReactParser.ID, 0);
};

FunctionRContext.prototype.PAR_IZQ = function () {
  return this.getToken(ReactParser.PAR_IZQ, 0);
};

FunctionRContext.prototype.id_list = function () {
  return this.getTypedRuleContext(Id_listContext, 0);
};

FunctionRContext.prototype.PAR_DER = function () {
  return this.getToken(ReactParser.PAR_DER, 0);
};

FunctionRContext.prototype.CORCHETE_IZQ = function () {
  return this.getToken(ReactParser.CORCHETE_IZQ, 0);
};

FunctionRContext.prototype.func_body = function () {
  return this.getTypedRuleContext(Func_bodyContext, 0);
};

FunctionRContext.prototype.CORCHETE_DER = function () {
  return this.getToken(ReactParser.CORCHETE_DER, 0);
};

FunctionRContext.prototype.PUNTO_COMA = function () {
  return this.getToken(ReactParser.PUNTO_COMA, 0);
};

FunctionRContext.prototype.SALTO = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(ReactParser.SALTO);
  } else {
    return this.getToken(ReactParser.SALTO, i);
  }
};

FunctionRContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterFunctionR(this);
  }
};

FunctionRContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitFunctionR(this);
  }
};

ReactParser.FunctionRContext = FunctionRContext;

ReactParser.prototype.functionR = function () {
  var localctx = new FunctionRContext(this, this._ctx, this.state);
  this.enterRule(localctx, 10, ReactParser.RULE_functionR);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 107;
    this.match(ReactParser.FUNCTION);
    this.state = 108;
    this.match(ReactParser.ID);
    this.state = 109;
    this.match(ReactParser.PAR_IZQ);
    this.state = 110;
    this.id_list();
    this.state = 111;
    this.match(ReactParser.PAR_DER);
    this.state = 112;
    this.match(ReactParser.CORCHETE_IZQ);
    this.state = 114;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === ReactParser.SALTO) {
      this.state = 113;
      this.match(ReactParser.SALTO);
    }

    this.state = 116;
    this.func_body();
    this.state = 118;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === ReactParser.SALTO) {
      this.state = 117;
      this.match(ReactParser.SALTO);
    }

    this.state = 120;
    this.match(ReactParser.CORCHETE_DER);
    this.state = 121;
    this.match(ReactParser.PUNTO_COMA);
    this.state = 123;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === ReactParser.SALTO) {
      this.state = 122;
      this.match(ReactParser.SALTO);
    }
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};

function Func_bodyContext(parser, parent, invokingState) {
  if (parent === undefined) {
    parent = null;
  }
  if (invokingState === undefined || invokingState === null) {
    invokingState = -1;
  }
  antlr4.ParserRuleContext.call(this, parent, invokingState);
  this.parser = parser;
  this.ruleIndex = ReactParser.RULE_func_body;
  return this;
}

Func_bodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Func_bodyContext.prototype.constructor = Func_bodyContext;

Func_bodyContext.prototype.RETURN = function () {
  return this.getToken(ReactParser.RETURN, 0);
};

Func_bodyContext.prototype.PAR_IZQ = function () {
  return this.getToken(ReactParser.PAR_IZQ, 0);
};

Func_bodyContext.prototype.PAR_DER = function () {
  return this.getToken(ReactParser.PAR_DER, 0);
};

Func_bodyContext.prototype.PUNTO_COMA = function () {
  return this.getToken(ReactParser.PUNTO_COMA, 0);
};

Func_bodyContext.prototype.html_elements = function () {
  return this.getTypedRuleContext(Html_elementsContext, 0);
};

Func_bodyContext.prototype.html_short_element = function () {
  return this.getTypedRuleContext(Html_short_elementContext, 0);
};

Func_bodyContext.prototype.SALTO = function (i) {
  if (i === undefined) {
    i = null;
  }
  if (i === null) {
    return this.getTokens(ReactParser.SALTO);
  } else {
    return this.getToken(ReactParser.SALTO, i);
  }
};

Func_bodyContext.prototype.enterRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.enterFunc_body(this);
  }
};

Func_bodyContext.prototype.exitRule = function (listener) {
  if (listener instanceof ReactListener) {
    listener.exitFunc_body(this);
  }
};

ReactParser.Func_bodyContext = Func_bodyContext;

ReactParser.prototype.func_body = function () {
  var localctx = new Func_bodyContext(this, this._ctx, this.state);
  this.enterRule(localctx, 12, ReactParser.RULE_func_body);
  var _la = 0; // Token type
  try {
    this.enterOuterAlt(localctx, 1);
    this.state = 125;
    this.match(ReactParser.RETURN);
    this.state = 126;
    this.match(ReactParser.PAR_IZQ);
    this.state = 128;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === ReactParser.SALTO) {
      this.state = 127;
      this.match(ReactParser.SALTO);
    }

    this.state = 132;
    this._errHandler.sync(this);
    var la_ = this._interp.adaptivePredict(this._input, 12, this._ctx);
    switch (la_) {
      case 1:
        this.state = 130;
        this.html_elements();
        break;

      case 2:
        this.state = 131;
        this.html_short_element();
        break;
    }
    this.state = 135;
    this._errHandler.sync(this);
    _la = this._input.LA(1);
    if (_la === ReactParser.SALTO) {
      this.state = 134;
      this.match(ReactParser.SALTO);
    }

    this.state = 137;
    this.match(ReactParser.PAR_DER);
    this.state = 138;
    this.match(ReactParser.PUNTO_COMA);
  } catch (re) {
    if (re instanceof antlr4.error.RecognitionException) {
      localctx.exception = re;
      this._errHandler.reportError(this, re);
      this._errHandler.recover(this, re);
    } else {
      throw re;
    }
  } finally {
    this.exitRule();
  }
  return localctx;
};
